autoscaling/loadbalancer.tf
resource "azurerm_lb" "demo" {
  name                = "${var.prefix}-lb"
  sku                 = length(var.zones) == 0 ? "Basic" : "Standard" # Basic is free but it doesn't support high availability zones
  location            = var.location
  resource_group_name = azurerm_resource_group.scalesets-loadbalancer-demo.name

  frontend_ip_configuration {
    name                 = "PublicIPAddress"
    public_ip_address_id = azurerm_public_ip.demo.id
  }
}

resource "azurerm_public_ip" "demo" {
  name                = "${var.prefix}-public-ip"
  location            = var.location
  resource_group_name = azurerm_resource_group.scalesets-loadbalancer-demo.name
  allocation_method   = "Static"
  domain_name_label   = azurerm_resource_group.scalesets-loadbalancer-demo.name
  sku                 = length(var.zones) == 0 ? "Basic" : "Standard"
}

resource "azurerm_lb_backend_address_pool" "bpepool" {
  loadbalancer_id = azurerm_lb.demo.id
  name            = "BackendAddressPool"
}

resource "azurerm_lb_probe" "demo" {
  loadbalancer_id     = azurerm_lb.demo.id
  name                = "http-probe"
  protocol            = "Http"
  request_path        = "/"
  port                = 80
}

resource "azurerm_lb_rule" "demo" {
  loadbalancer_id                = azurerm_lb.demo.id
  name                           = "LBRule"
  protocol                       = "Tcp"
  frontend_port                  = 80
  backend_port                   = 80
  frontend_ip_configuration_name = "PublicIPAddress"
  probe_id                       = azurerm_lb.demo.id
  backend_address_pool_ids       = [azurerm_lb_backend_address_pool.bpepool.id]
}
